Add unit tests, and minor fixes